--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
 @import url("https://uilight.netlify.app/main.css");
+@import url("./styles/utils.css");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
